# 2024Fall-8650

./: .gitignore  README.md  environment.yml  matrix-demo1.ipynb  matrix-demo2.ipynb  python-intro.ipynb  python-list-layout.ipynb
01_threads_hello/: CMakeLists.txt  main.cc
02_threads_race/: CMakeLists.txt  main.cc
03_threads_mutex/: CMakeLists.txt  main.cc
04_threads_atomics/: CMakeLists.txt  main.cc
cpp-array-layout/: array.cc
cpp-intro/: CMakeLists.txt  intro.cpp
cpp-matrix-demo/: matrix-demo.cpp  timer.h
cpp-matrix-speed/: matrix-speed.cpp
cpp-shapes/: CMakeLists.txt  shapes.cc
cpp-templates/: Makefile  explicit.cc  functiontemplate.cc  square.cc  vector-norm.cc
mpi-hello/: CMakeLists.txt  main.cc
